# extract-bench-experiments

./: .env.example  .gitignore  LICENSE  README.md  extraction_analysis.ipynb  pyproject.toml
dataset/: README.md
dataset/academic/research/: research-schema.json
dataset/finance/10kq/: 10kq-schema.json
dataset/finance/credit_agreement/: credit_agreement-schema.json
dataset/hiring/resume/: resume-schema.json
dataset/sport/swimming/: swimming-schema.json
eval_results/setup1_openrouter_google_gemini-3-flash-preview/NIPS-1989-handwritten-digit-recognition-with-a-back-propagation-network-Paper/: fields.csv  fields.md  report.json  summary.txt
eval_results/setup1_openrouter_google_gemini-3-flash-preview/[fan24] rag survey/: fields.csv  fields.md  report.json  summary.txt
eval_results/setup1_openrouter_google_gemini-3-flash-preview/[li25] vlm survey/: fields.csv  fields.md  report.json  summary.txt
eval_results/setup1_openrouter_google_gemini-3-flash-preview/[zhao25] a survey of LLMs/: fields.csv  fields.md  report.json  summary.txt
eval_results/setup1_openrouter_google_gemini-3-flash-preview/shah24--flashattention-3/: fields.csv  fields.md  report.json  summary.txt
eval_results/setup1_openrouter_google_gemini-3-flash-preview/survey of dimensionality reduction techniques/: fields.csv  fields.md  report.json  summary.txt
eval_results/setup1_openrouter_google_gemini-3-flash-preview_20260313_102306/[fan24] rag survey/: fields.md  (+3 more)
scripts/: 01_parse_pdfs.py  02_evaluate_models.py
src/extract_bench/: __init__.py
tests/: test_evaluation.py  test_real_llm.py
(+397 files in other folders)
